feat: fixing classroom error and problem, add search system, add slug for classroom for student role

--- a/src/app/style/globals.css
+++ b/src/app/style/globals.css
@@ -60,6 +60,10 @@
   }
 }
 
+.remove-sb::-webkit-scrollbar {
+  width: 0;
+  display: none;
+}
 
 @layer base {
   * {
@@ -70,3 +74,4 @@
     @apply bg-background text-foreground;
   }
 }
+
