--- a/src/app/style/globals.css
+++ b/src/app/style/globals.css
@@ -2,18 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+/* COLOR TEMPLATE :
+1.BACKGROUND : hsl(42, 35%, 94.5%); #FAF6E9 MAIN BACKGROUND COLOR
+2.FOREGROUND : hsl(0, 0%, 28.6%); #494949 MAIN TEXT COLOR
+3.CARD : hsl(48, 50%, 97%); #FFFDF6 CARD COLOR
+4.BUTTON : hsl(47, 33%, 89%); #ECE8D9 FOR INTERACTION COLOR (Button, Dll)*/
+
 @layer base {
   :root {
-    --background: 42 35% 94.5%; /* #FAF6E9 */
-    --foreground: 0 0% 28.6%; /* #494949 */
-    --card: 48 50% 97%; /* #FFFDF6 */
+    --background: 42 35% 94.5%;
+    /* #FAF6E9 */
+    --foreground: 0 0% 28.6%;
+    /* #494949 */
+    --card: 48 50% 97%;
+    /* #FFFDF6 */
     --card-foreground: 20 14.3% 4.1%;
     --popover: 0 0% 100%;
     --popover-foreground: 20 14.3% 4.1%;
-    --primary: 24.6 95% 53.1%;
-    --primary-foreground: 60 9.1% 97.8%;
-    --secondary: 60 4.8% 95.9%;
-    --secondary-foreground: 24 9.8% 10%;
+    --primary: 47, 33%, 89%;
+    --primary-foreground: 0, 0%, 28.6%;
+    --secondary: 47, 33%, 89%;
+    --secondary-foreground: 0, 0%, 28.6%;
     --muted: 60 4.8% 95.9%;
     --muted-foreground: 25 5.3% 44.7%;
     --accent: 60 4.8% 95.9%;
@@ -24,7 +33,7 @@
     --input: 20 5.9% 90%;
     --ring: 24.6 95% 53.1%;
     --radius: 0.75rem;
-    --chart-1: 12 76% 61%;
+    --chart-1: 47, 33%, 45%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
@@ -32,10 +41,14 @@
   }
 
   .dark {
-    --background: 0 0% 28.6%; /* #494949 */
-    --foreground: 42 35% 94.5%; /* #FAF6E9 */
-    --card: 20 14.3% 4.1%; /* Tetap gelap untuk mode gelap */
-    --card-foreground: 48 50% 97%; /* Terang untuk kontras */
+    --background: 0 0% 28.6%;
+    /* #494949 */
+    --foreground: 42 35% 94.5%;
+    /* #FAF6E9 */
+    --card: 20 14.3% 4.1%;
+    /* Tetap gelap untuk mode gelap */
+    --card-foreground: 48 50% 97%;
+    /* Terang untuk kontras */
     --popover: 20 14.3% 4.1%;
     --popover-foreground: 60 9.1% 97.8%;
     --primary: 20.5 90.2% 48.2%;
