--- a/src/app/style/globals.css
+++ b/src/app/style/globals.css
@@ -110,6 +110,35 @@
   display: none;
 }
 
+/* Tambahkan ini ke file CSS global atau file gaya yang relevan */
+@keyframes blink {
+  0%, 50% {
+    opacity: 0;
+  }
+  25%, 75% {
+    opacity: 1;
+  }
+}
+
+.dot-blink {
+  animation: blink 1s infinite;
+  display: inline-block;
+  margin-left: 0.2rem;
+}
+
+.dot-blink:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.dot-blink:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+.dot-blink:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+
 @layer base {
   * {
     @apply border-border;
